# airwch

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build.yml  release.yml
cmake/: toolchain.cmake
src/: main.c
src/wch/ble/include/: CH58xBLE_LIB.h
src/wch/hal/: KEY.c  LED.c  MCU.c  RTC.c  SLEEP.c
src/wch/hal/include/: HAL.h  KEY.h  LED.h  RTC.h  SLEEP.h  config.h
src/wch/periph/: CH58x_adc.c  CH58x_clk.c  CH58x_flash.c  CH58x_gpio.c  CH58x_pwm.c  CH58x_pwr.c  CH58x_spi0.c  CH58x_spi1.c  CH58x_sys.c  CH58x_timer0.c  CH58x_timer1.c  CH58x_timer2.c  CH58x_timer3.c  CH58x_uart0.c  CH58x_uart1.c  CH58x_uart2.c  CH58x_uart3.c  CH58x_usb2dev.c  CH58x_usb2hostBase.c  CH58x_usb2hostClass.c  CH58x_usbhostBase.c  CH58x_usbhostClass.c
src/wch/periph/include/: CH583SFR.h  CH58x_adc.h  CH58x_clk.h  CH58x_common.h  CH58x_flash.h  CH58x_gpio.h  CH58x_i2c.h  CH58x_pwm.h  CH58x_pwr.h  CH58x_spi.h  CH58x_sys.h  CH58x_timer.h  CH58x_uart.h  CH58x_usbdev.h  CH58x_usbhost.h  ISP583.h
src/wch/rvmsis/: core_riscv.c
src/wch/rvmsis/include/: core_riscv.h
src/wch/startup/: startup_CH583.S
utils/: convert-key-to-template.js  generate_keys.py  generate_keys_orig.py
